# ai_driven_hackathon01

./: .gitignore  CLAUDE.md  start.sh
.claude/: agent-context.md  settings.local.json
.claude/commands/: sp.checklist.md  sp.git.commit_pr.md  sp.implement.md  sp.specify.md
.specify/memory/: constitution.md
backend/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  run_server.py
backend/.claude/: settings.local.json
backend/.specify/memory/: constitution.md
backend/docs/: fastapi-rag-chat-best-practices.md
backend/history/prompts/constitution/: 001-rag-chatbot-constitution.constitution.prompt.md
backend/history/prompts/general/: 001-docusaurus-content-extraction-research.general.prompt.md  001-fastapi-rag-chat-research.general.prompt.md
backend/migrations/: 001_create_users_tables.sql  002_better_auth_tables.sql
backend/scripts/: crawl_and_ingest.py  deploy.sh  ingest.py  ingest_embeddings.py  run_migrations.py  simple_ingest.py  smoke-tests.sh  verify_embeddings.py
backend/src/: __init__.py  config.py  database.py  logger.py
backend/src/api/: auth.py  profile.py
backend/src/middleware/: __init__.py  auth.py
backend/src/models/: __init__.py  auth_event.py  content.py  history.py  profile.py  selected_text.py  session.py  user.py
frontend/: README.md  auth-schema.ts  auth.server.ts  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tailwind.config.js  tsconfig.json
frontend/docs/00-intro/: architecture-overview.mdx  hardware-requirements.mdx  overview.mdx
frontend/docs/01-ros2/: fundamentals.mdx  rclpy-implementation.mdx  urdf-and-robot-modeling.mdx
frontend/docs/02-simulation/: gazebo-setup.mdx  sensor-modeling.mdx  unity-visualization.mdx
frontend/docs/03-aicontrol/: humanoid-kinematics.mdx  isaac-sim-setup.mdx  sim-to-real-transfer.mdx
frontend/docs/04-capstone/: final-project-breakdown.mdx  vla-conversational-ai.mdx
frontend/docs/99-hardware/: procurement-tables.mdx  workstation-spec.mdx
frontend/src/: client-modules.ts
frontend/src/context/: AuthContext.tsx
frontend/src/css/: custom.css
frontend/src/lib/: auth-mock.ts  auth.ts
frontend/src/pages/: 404.module.css  404.tsx  authPage.module.css  index.module.css  index.tsx  signin.tsx  signup.tsx  test-chat-widget.js
frontend/src/theme/: Root.js
history/prompts/001-robotics-lab-guide/: 0001-robotics-lab-planning.plan.prompt.md  0002-robotics-lab-tasks.tasks.prompt.md  (+2 more)
specs/001-robotics-lab-guide/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-rag-chatbot/: cohere-embed-v3-best-practices.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-chatbot-widget/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-user-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+58 files in other folders)
